<resources>
    <string name="app_name">OpenEvents</string>
    <string name="e_mail">youremail@email.com</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>

    <string name="search_person_tittle">Search</string>
    <string name="events_tittle">Events</string>
    <string name="profile_tittle">Profile</string>

    <string name="password_again">Repeat password</string>
    <string name="login">Login</string>
    <string name="create_account">Create a new account</string>
    <string name="image">Image ulr</string>

    <string name="logout">LogOut</string>
    <string name="my_friends">My Friends</string>
    <string name="create_event">Create Event</string>

    <string name="create_event_event_name">Event Name</string>
    <string name="create_event_event_image">Event image</string>
    <string name="create_event_location">Location</string>
    <string name="create_event_description">Description</string>
    <string name="create_event_participators">Participators</string>
    <string name="create_event_type_of_event">Type of event</string>
    <string name="create_event_start_date">Start Date</string>

    <string name="description_event_tittle">Tittle</string>
    <string name="description_event_details">Description</string>
    <string name="description_event_datestart">Start Date</string>
    <string name="description_event_date_end">End Date</string>
    <string name="description_event_location">Location</string>
    <string name="description_event_attend">ATTEND</string>
    <string name="my_friend_requests">Friend Requests:</string>
    <string name="my_friend">My Friends: </string>
    <string name="edit_event">Edit Event</string>
    <string name="Attend">ATTEND</string>
    <string name="unattend">CANCEL ATTENDANCE</string>
    <string name="best_events">Best events</string>
    <string name="nombre">Nombre</string>

    <string name="search_by">search by</string>

</resources>