<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.activities.CreateEditEventActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="5dp"
                android:text="@string/create_event"
                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                android:textSize="50sp" />


            <EditText
                android:id="@+id/ce_name"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/create_event_event_name"
                android:padding="15dp"
                android:textSize="15sp"
                android:autofillHints="name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/ce_image"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/create_event_event_image"
                android:padding="15dp"
                android:textSize="15sp"
                 />

            <EditText
                android:id="@+id/ce_location"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/create_event_location"
                android:padding="15dp"
                android:textSize="15sp"
                 />

            <EditText
                android:id="@+id/ce_description"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/create_event_description"
                android:padding="15dp"
                android:textSize="15sp" />


            <EditText
                android:id="@+id/ce_participators"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/create_event_participators"
                android:inputType="number"
                android:padding="15dp"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/ce_event_type"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/create_event_type_of_event"
                android:padding="15dp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="5dp"
                android:text="@string/create_event_start_date"
                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                android:textSize="20sp" />

            <DatePicker
                android:id="@+id/start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <TimePicker
                android:id="@+id/start_time"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:timePickerMode="spinner" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="5dp"
                android:text="@string/description_event_date_end"
                android:textAlignment="center"
                android:textColor="@color/dark_blue"
                android:textSize="20sp" />


            <DatePicker
                android:id="@+id/end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <TimePicker
                android:id="@+id/end_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:timePickerMode="spinner" />

            <Button
                android:id="@+id/btn_add_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/create_event"
                android:textColor="@android:color/white" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>